Novos metodos para implementação clara do roque do rei